# scidec

./: Cargo.toml  README.md  Taskfile.yml  coverage.sh
benches/: bid128_from_string.rs  number_from_string.rs
src/: bid128.rs  lib.rs  number.rs  recognizer.rs
src/tests/: mod.rs
tests/: tests.rs
