[package]
name = "scidec"
version = "0.1.7"
authors = ["Dariusz Depta <wisbery@users.noreply.github.com>"]
description = "Scientific number converter"
documentation = "https://docs.rs/scidec/"
repository = "https://github.com/wisbery/scidec.git"
keywords = ["scientific", "number", "decimal", "converter"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"
