[package]
name = "scidec"
version = "0.1.9"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Scientific number converter"
documentation = "https://docs.rs/scidec/"
repository = "https://github.com/EngosSoftware/scidec.git"
keywords = ["scientific", "number", "decimal", "converter"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"
